--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "topthink/think-mongo": "1.*",
         "topthink/think-queue": "1.*",
         "topthink/think-image": "1.*",
-        "topthink/think-worker": "^1.0"
+        "topthink/think-worker": "^1.0",
+        "workerman/workerman-for-win": "^3.5"
     },
     "autoload": {
         "psr-4": {
